# cookiecutter-data-science

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .env.example  .gitignore  LICENSE  Makefile  README.md  install.md  pyproject.toml  requirements.txt  setup.py  tasks.py
{{ cookiecutter.project_slug }}/app/: main.py
{{ cookiecutter.project_slug }}/docs/: contributing.md  developer_guide.md  index.md  install.md  project_structure.md  user_guide.md
{{ cookiecutter.project_slug }}/scripts/: setup_env.sh
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.module_name }}/features/: feature_engineering.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.module_name }}/models/: model_utils.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.module_name }}/utils/: paths.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.module_name }}/visualization/: plotting.py
